# PyBindProtoExample

./: CMakeLists.txt  app.py  mylib.cpp  mymessages.proto  notes.md
